Se terminó html y css de perfil,se creo el html y css de registro, se arreglaron problemas con anchords, por ultimo se linkearon vistas entre ellas

--- a/perfil/perfil.html
+++ b/perfil/perfil.html
@@ -21,7 +21,7 @@
                                 <label for="edicion" style="cursor: pointer;">Configuración</label>
                             </li>
                                 
-                            <li>opcion 3</li>
+                            <li><a href="#">Historia y reglas</a></li>
                         </ul>
                     </div>
                     <div class="cerrar">
@@ -53,7 +53,73 @@
                     <button type="reset" hidden></button>
                 </form>
                 <div class="abajo">
-
+                    <div class="amigos">
+                        <h1>Amigos</h1>
+                        <div class="card">
+                            <div class="if">
+                                <img src="/images/blank-profile-picture-973460_1280.webp" class="itemdetalle"/>
+                            </div>
+                            <div class="dd">
+                                <h1>Julian</h1>
+                                <h2>1563 pts</h2>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="if">
+                                <img src="/images/blank-profile-picture-973460_1280.webp" class="itemdetalle"/>
+                            </div>
+                            <div class="dd">
+                                <h1>Pedro</h1>
+                                <h2>1641 pts</h2>
+                            </div>
+                        </div>           
+                    </div>
+                    <div class="elo">
+                        <div class="puntos">
+                            <h1>1427 pts.</h1>
+                        </div>
+                        <div class="f">
+                            <img src="/images/peon.png" class="foto-elo"/>
+                        </div>
+                        <div class="rango">
+                            <h1>Peón</h1>
+                        </div>
+                    </div>
+                    <div class="historial">
+                        <div class="table-container">
+                            <table>
+                                <thead> 
+                                    <tr>
+                                        <th>Contrincante</th>
+                                        <th>Resultado</th>
+                                        <th>Puntaje</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Gonzalo</td>
+                                        <td>Derrota</td>
+                                        <td>0-1</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Alonso</td>
+                                        <td>Victoria</td>
+                                        <td>1-0</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Nutrin</td>
+                                        <td>Derrota</td>
+                                        <td>0-1</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Nutrion</td>
+                                        <td>Empate</td>
+                                        <td>1/2 - 1/2</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
