--- a/login/login.html
+++ b/login/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -8,7 +8,25 @@
         <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     </head>
     <body>
-        <div class="contenedor">
+        <div class="contenedor a">
+            <div class="titulo">
+                <h1>Ajedrez online</h1>
+                <div class="beneficio">
+                    <p>Ten batallas contra desconocido o tus amigos</p>
+                    <img src="/images/—Pngtree—black crossed sword_6498509.png" alt="Espadas cruzadas">
+                </div>
+                <div class="beneficio"> <img src="/images/pngwing.com (1).png" alt="Gráfico de crecimiento">
+                    <p>Mejora tus habilidades</p>
+                   
+                </div>
+                <div class="beneficio">
+                    <p class="p">Conviértete en el mejor</p>
+                    <img src="/images/vecteezy_crown_1189666.png" class="f" alt="Corona">
+                </div>
+                <p class="quienes"><a href="/nosotros/Desarrolladores.html">¿Quienes somos?</a></p>
+            </div>
+        </div>
+        <div class="contenedor b">
             <form action="formulario">
                 <h1>Iniciar sesión</h1>
                 <div class="caja-input">
@@ -25,10 +43,9 @@
                     </label>
                     <a href="#">¿Olvidaste tu contraseña?</a>
                 </div>
-                <button type="submit" class="btn">Iniciar sesión</button>
+                <button type="submit" class="btn"><a href="/pp/pp.html" class="">Iniciar sesión</a></button>
                 <div class="link-registro">
                     <p>¿No tienes cuenta? <a href="/registro/registro.html">Registro</a></p>
-                
                 </div>
             </form>
         </div>
