--- a/pp/pp.html
+++ b/pp/pp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
         <h1>Inicio</h1>  
     </div>
     
-    <div class="contenedor categorias">
+    <div class="contenedor categorias"> 
         <label for="nueva-partida" class="boton">
            <div class="box">
                 <img src="/images/peon.png" class="item"/>
@@ -62,7 +62,7 @@
         <label class="boton volver" for="inicio">⬅ Volver</label>
         <h1>Nueva partida</h1>
         <img src="/images/peon.png" class="itemdetalle"/>
-        <button class="iniciar">Iniciar</button>
+        <button class="iniciar"><a href="/partida/Partida.html" class="">Iniciar</a></button>
     </div>
 
     <div class="contenedor detalle curso">
@@ -157,27 +157,27 @@
         <div class="contenedor-estadisticas">
             <div class="est">
                 <h3>Victorias</h3>
-                <big>1</big>
+                <h1>1</h1>
             </div>  
             <div class="est">
                 <h3>Empates</h3>
-                <big>1</big>
+                <h1>1</h1>
             </div>  
             <div class="est">
                 <h3>Derrotas</h3>
-                <big>2</big>
+                <h1>2</hh1>
             </div>  
             <div class="est">
                 <h3>Partidas</h3>
-                <big>4</big>
+                <h1>4</h1>
             </div>  
             <div class="est">
                 <h3>Movimientos</h3>
-                <big>239</big>
+                <h1>239</h1>
             </div>  
             <div class="est">
                 <h3>Rango</h3>
-                <big>1427</big>
+                <h1>1427</h1>
             </div>  
         </div>
     </div>
