--- a/registro/registro.html
+++ b/registro/registro.html
@@ -38,7 +38,7 @@
                 <div class="caja-input">
                     <input type="date" placeholder="Fecha de nacimiento" required>
                 </div>
-                <button type="submit" class="btn">Registarse</button>
+                <button type="submit" class="btn"><a href="/pp/pp.html" class="">Registarse</a></button>
                 <div class="link-registro">
                     <p>¿Ya tienes cuenta? <a href="/login/login.html">Inicia sesión</a></p>
                 
