--- a/perfil/perfil.html
+++ b/perfil/perfil.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es"> 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Perfil</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles.css"> 
     </head>
     <body>
         <div class="contenedor">
@@ -21,10 +21,10 @@
                                 <label for="edicion" style="cursor: pointer;">Configuración</label>
                             </li>
                                 
-                            <li><a href="#">Historia y reglas</a></li>
+                            <li><a href="/historias y reglas/HistoriaReglas.html">Historia y reglas</a></li>
                         </ul>
                     </div>
-                    <div class="cerrar">
+                    <div class="cerrar">        
                         <a href="/login/login.html"><p>cerrar sesion</p></a>
                     </div>
                 </div>
