--- a/login/login.html
+++ b/login/login.html
@@ -13,15 +13,15 @@
                 <h1>Ajedrez online</h1>
                 <div class="beneficio">
                     <p>Ten batallas contra desconocido o tus amigos</p>
-                    <img src="/images/—Pngtree—black crossed sword_6498509.png" alt="Espadas cruzadas">
+                    <img src="/images/espadas.png" alt="Espadas cruzadas">
                 </div>
-                <div class="beneficio"> <img src="/images/pngwing.com (1).png" alt="Gráfico de crecimiento">
+                <div class="beneficio"> 
+                    <img src="/images/crecimento.png" alt="Gráfico de crecimiento">
                     <p>Mejora tus habilidades</p>
-                   
                 </div>
                 <div class="beneficio">
-                    <p class="p">Conviértete en el mejor</p>
-                    <img src="/images/vecteezy_crown_1189666.png" class="f" alt="Corona">
+                    <p>Conviértete en el mejor</p>
+                    <img src="/images/corona.png" alt="Corona">
                 </div>
                 <p class="quienes"><a href="/nosotros/Desarrolladores.html">¿Quienes somos?</a></p>
             </div>
@@ -43,7 +43,7 @@
                     </label>
                     <a href="#">¿Olvidaste tu contraseña?</a>
                 </div>
-                <button type="submit" class="btn"><a href="/pp/pp.html" class="">Iniciar sesión</a></button>
+                <a href="/pp/pp.html" class="btn">Iniciar sesión</a>
                 <div class="link-registro">
                     <p>¿No tienes cuenta? <a href="/registro/registro.html">Registro</a></p>
                 </div>
