--- a/nosotros/Desarrolladores.html
+++ b/nosotros/Desarrolladores.html
@@ -19,7 +19,7 @@
         <hr class="separador">
         <div class="datos">
             <div class="card">
-                <img src="/images/WhatsApp Image 2025-04-05 at 19.33.46.jpeg" alt="Ricardo Lepin">
+                <img src="/images/ricardo.jpeg" alt="Ricardo Lepin">
                 <h4 class="nombre">Ricardo Lepin</h4>
                 <div class="info">
                     <p>21 años</p>
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/images/WhatsApp Image 2025-04-05 at 20.28.41.jpeg" alt="Gonzalo Morales">
+                <img src="/images/gonzalo.jpeg" alt="Gonzalo Morales">
                 <h4 class="nombre">Gonzalo Morales</h4>
                 <div class="info">
                     <p>21 años</p>
