--- a/perfil/perfil.html
+++ b/perfil/perfil.html
@@ -21,7 +21,7 @@
                                 <label for="edicion" style="cursor: pointer;">Configuración</label>
                             </li>
                                 
-                            <li><a href="/historias y reglas/HistoriaReglas.html">Historia y reglas</a></li>
+                            <li><a href="/historias-y-reglas/HistoriaReglas.html">Historia y reglas</a></li>
                         </ul>
                     </div>
                     <div class="cerrar">        
@@ -57,7 +57,7 @@
                         <h1>Amigos</h1>
                         <div class="card">
                             <div class="if">
-                                <img src="/images/blank-profile-picture-973460_1280.webp" class="itemdetalle"/>
+                                <img src="/images/foto-perfil.webp" class="itemdetalle" alt="foto-perfil">
                             </div>
                             <div class="dd">
                                 <h1>Julian</h1>
@@ -66,7 +66,7 @@
                         </div>
                         <div class="card">
                             <div class="if">
-                                <img src="/images/blank-profile-picture-973460_1280.webp" class="itemdetalle"/>
+                                <img src="/images/foto-perfil.webp" class="itemdetalle" alt="foto-perfil">
                             </div>
                             <div class="dd">
                                 <h1>Pedro</h1>
@@ -79,7 +79,7 @@
                             <h1>1427 pts.</h1>
                         </div>
                         <div class="f">
-                            <img src="/images/peon.png" class="foto-elo"/>
+                            <img src="/images/peon.png" class="foto-elo" alt="Foto de elo">
                         </div>
                         <div class="rango">
                             <h1>Peón</h1>
