--- a/pp/pp.html
+++ b/pp/pp.html
@@ -1,214 +1,217 @@
 <!DOCTYPE html>
 <html lang="en"> 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-    <title>Pagina principal</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-    <input type="radio" name="vista" id="inicio" checked>
-    <input type="radio" name="vista" id="estadisticas">
-    <input type="radio" name="vista" id="en-curso">
-    <input type="radio" name="vista" id="historial">
-    <input type="radio" name="vista" id="partidas-publicas">
-    <input type="radio" name="vista" id="nueva-partida">
-    <div class="titulo">
-        <h1>Inicio</h1>  
-    </div>
-    
-    <div class="contenedor categorias"> 
-        <label for="nueva-partida" class="boton">
-           <div class="box">
-                <img src="/images/peon.png" class="item"/>
-                <h2>Nueva partida</h2>
-            </div>  
-        </label>
-        <label for="en-curso" class="boton">
-            <div class="box">
-                <img src="/images/klipartz.com.png" class="item"/>
-                <h2>Partidas en curso</h2>
-            </div>
-        </label>
-        <label for="partidas-publicas" class="boton">
-            <div class="box">
-                <img src="/images/punto-de-partida.png" class="item"/>
-                <h2>Partidas publicas</h2>
-            </div>
-        </label>
-        <label for="historial" class="boton">
-            <div class="box">
-                <img src="/images/historique-icone-de-l-historique-noir.png" class="item"/>
-                <h2>Historial</h2>
-            </div>
-        </label>
-        <label for="estadisticas" class="boton">
-            <div class="box">
-                <img src="/images/pngwing.com.png" class="item"/>
-                <h2>Estadísticas</h2>
-            </div>
-        </label>
-        <label class="boton">
-            <a href="/perfil/perfil.html" class="box">
-                 <img src="/images/pngegg.png" class="item"/>
-                 <h2>Perfil</h2>
-            </a>  
-        </label>
-    </div> 
-
-    <div class="contenedor detalle partida">
-        <label class="boton volver" for="inicio">⬅ Volver</label>
-        <h1>Nueva partida</h1>
-        <img src="/images/peon.png" class="itemdetalle"/>
-        <button class="iniciar"><a href="/partida/Partida.html" class="">Iniciar</a></button>
-    </div>
-
-    <div class="contenedor detalle curso">
-        <label class="boton volver" for="inicio">⬅ Volver</label>
-        <h1>Partidas en curso</h1>
-        <div class="table-container">
-            <table>
-                <thead>
-                    <tr> 
-                        <th>Jugador</th>
-                        <th>Movimientos</th>
-                        <th>Inicio</th>
-                        <th>Entrar</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Monserrat</td>
-                        <td>12</td>
-                        <td>3/12/24</td>
-                        <td><button class="jugar">Jugar</button></td>
-                    </tr>
-                    <tr>
-                        <td>Ana</td>
-                        <td>10</td>
-                        <td>5/1/2025</td>
-                        <td><button class="jugar">Jugar</button></td>
-                    </tr>
-                    <tr>
-                        <td>Luis</td>
-                        <td>8</td>
-                        <td>5/1/2025</td>
-                        <td><button class="jugar">Jugar</button></td>
-                    </tr>
-                    <tr>
-                        <td>Marta</td>
-                        <td>6</td>
-                        <td>9/2/2025</td>
-                        <td><button class="jugar">Jugar</button></td>
-                    </tr>
-                </tbody>
-            </table>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+        <title>Pagina principal</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <input type="radio" name="vista" id="inicio" checked>
+        <input type="radio" name="vista" id="nueva-partida">
+        <input type="radio" name="vista" id="en-curso">
+        <input type="radio" name="vista" id="partidas-publicas">
+        <input type="radio" name="vista" id="historial">
+        <input type="radio" name="vista" id="estadisticas">
+        <div class="titulo">
+            <h1>Inicio</h1>  
         </div>
-    </div>
-
-    <div class="contenedor detalle historial">
-        <label class="boton volver" for="inicio">⬅ Volver</label>
-        <h1>Historial</h1>
-        <div class="table-container">
-            <table>
-                <thead> 
-                    <tr>
-                        <th>Contrincante</th>
-                        <th>Resultado</th>
-                        <th>Puntaje</th>
-                        <th>Movimientos</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Gonzalo</td>
-                        <td>Derrota</td>
-                        <td>0-1</td>
-                        <td>52</td>
-                    </tr>
-                    <tr>
-                        <td>Alonso</td>
-                        <td>Victoria</td>
-                        <td>1-0</td>
-                        <td>43</td>
-                    </tr>
-                    <tr>
-                        <td>Nutrin</td>
-                        <td>Derrota</td>
-                        <td>0-1</td>
-                        <td>66</td>
-                    </tr>
-                    <tr>
-                        <td>Nutrion</td>
-                        <td>Empate</td>
-                        <td>1/2 - 1/2</td>
-                        <td>78</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="contenedor categorias"> 
+            <label for="nueva-partida" class="boton">
+                <span class="box-container"> <!-- Contenedor adicional -->
+                    <span class="box">
+                        <img src="/images/peon.png" class="item" alt="Nueva partida">
+                        <span>Nueva partida</span>
+                    </span>  
+                </span>
+            </label>
+            <label for="en-curso" class="boton">
+                <span class="box-container"> <!-- Contenedor adicional -->
+                    <span class="box">
+                        <img src="/images/reloj-arena.png" class="item" alt="Partidas en curso">
+                        <span>Partidas en curso</span>
+                    </span>  
+                </span>
+            </label>
+            <label for="partidas-publicas" class="boton">
+                <span class="box-container"> <!-- Contenedor adicional -->
+                    <span class="box">
+                        <img src="/images/punto-de-partida.png" class="item" alt="Partidas publicas">
+                        <span>Partidas publicas</span>
+                    </span>  
+                </span>
+            </label>
+            <label for="historial" class="boton">
+                <span class="box-container"> <!-- Contenedor adicional -->
+                    <span class="box">
+                        <img src="/images/reloj.png" class="item" alt="Historial">
+                        <span>Historial</span>
+                    </span>  
+                </span>
+            </label>
+            <label for="estadisticas" class="boton">
+                <span class="box-container"> <!-- Contenedor adicional -->
+                    <span class="box">
+                        <img src="/images/estadistica.png" class="item" alt="Estadísticas">
+                        <span>Estadísticas</span>
+                    </span>  
+                </span>
+            </label>
+            <label class="boton">
+                <a href="/perfil/perfil.html" class="box">
+                    <img src="/images/perfil.png" class="item" alt="Perfil"> 
+                    <span>Perfil</span>
+                </a>  
+            </label>
+        </div> 
+        <div class="contenedor detalle partida">
+            <label class="boton volver" for="inicio">⬅ Volver</label>
+            <h1>Nueva partida</h1>
+            <img src="/images/peon.png" class="itemdetalle" alt="Iniciar">
+            <a href="/partida/Partida.html" class="iniciar">Iniciar</a>
         </div>
-    </div>
-
-    <div class="contenedor detalle estadisticas">
-        <label class="boton volver" for="inicio">⬅ Volver</label>
-        <h1>Estadísticas</h1>
-        <div class="contenedor-estadisticas">
-            <div class="est">
-                <h3>Victorias</h3>
-                <h1>1</h1>
-            </div>  
-            <div class="est">
-                <h3>Empates</h3>
-                <h1>1</h1>
-            </div>  
-            <div class="est">
-                <h3>Derrotas</h3>
-                <h1>2</hh1>
-            </div>  
-            <div class="est">
-                <h3>Partidas</h3>
-                <h1>4</h1>
-            </div>  
-            <div class="est">
-                <h3>Movimientos</h3>
-                <h1>239</h1>
-            </div>  
-            <div class="est">
-                <h3>Rango</h3>
-                <h1>1427</h1>
-            </div>  
-        </div>
-    </div>
-   
-    <div class="contenedor detalle publica">
-        <label class="boton volver" for="inicio">⬅ Volver</label>
-        <h1>Partidas disponibles</h1>
-        <div class="partidas">
-            <div class="carrousel">
-                <article class="card">
-                    <h1>Pepito</h1>
-                    <button> Jugar</button>
-                </article>
-                <article class="card">
-                    <h1>Juana</h1>
-                    <button> Jugar</button>
-                </article>
-                <article class="card">
-                    <h1>Andrés</h1>
-                    <button> Jugar</button>
-                </article>
-                <article class="card">
-                    <h1>Ronaldo</h1>
-                    <button> Jugar</button>
-                </article>
-                <article class="card">
-                    <h1>Diego</h1>
-                    <button> Jugar</button>
-                </article>
+        <div class="contenedor detalle curso">
+            <label class="boton volver" for="inicio">⬅ Volver</label>
+            <h1>Partidas en curso</h1>
+            <div class="table-container">
+                <table>
+                    <thead>
+                        <tr> 
+                            <th>Jugador</th>
+                            <th>Movimientos</th>
+                            <th>Inicio</th>
+                            <th>Entrar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Monserrat</td>
+                            <td>12</td>
+                            <td>3/12/24</td>
+                            <td><button class="jugar">Jugar</button></td>
+                        </tr>
+                        <tr>
+                            <td>Ana</td>
+                            <td>10</td>
+                            <td>5/1/2025</td>
+                            <td><button class="jugar">Jugar</button></td>
+                        </tr>
+                        <tr>
+                            <td>Luis</td>
+                            <td>8</td>
+                            <td>5/1/2025</td>
+                            <td><button class="jugar">Jugar</button></td>
+                        </tr>
+                        <tr>
+                            <td>Marta</td>
+                            <td>6</td>
+                            <td>9/2/2025</td>
+                            <td><button class="jugar">Jugar</button></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
-    </div>
-</body>
+        <div class="contenedor detalle publica">
+            <label class="boton volver" for="inicio">⬅ Volver</label>
+            <h1>Partidas disponibles</h1>
+            <div class="partidas">
+                <div class="carrousel">
+                    <article class="card">
+                        <h2>Pepito</h2>
+                        <button> Jugar</button>
+                    </article>
+                    <article class="card">
+                        <h2>Juana</h2>
+                        <button> Jugar</button>
+                    </article>
+                    <article class="card">
+                        <h2>Andrés</h2>
+                        <button> Jugar</button>
+                    </article>
+                    <article class="card">
+                        <h2>Ronaldo</h2>
+                        <button> Jugar</button>
+                    </article>
+                    <article class="card">
+                        <h2>Diego</h2>
+                        <button> Jugar</button>
+                    </article>
+                </div>
+            </div>
+        </div>
+        <div class="contenedor detalle historial">
+            <label class="boton volver" for="inicio">⬅ Volver</label>
+            <h1>Historial</h1>
+            <div class="table-container">
+                <table>
+                    <thead> 
+                        <tr>
+                            <th>Contrincante</th>
+                            <th>Resultado</th>
+                            <th>Puntaje</th>
+                            <th>Movimientos</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Gonzalo</td>
+                            <td>Derrota</td>
+                            <td>0-1</td>
+                            <td>52</td>
+                        </tr>
+                        <tr>
+                            <td>Alonso</td>
+                            <td>Victoria</td>
+                            <td>1-0</td>
+                            <td>43</td>
+                        </tr>
+                        <tr>
+                            <td>Nutrin</td>
+                            <td>Derrota</td>
+                            <td>0-1</td>
+                            <td>66</td>
+                        </tr>
+                        <tr>
+                            <td>Nutrion</td>
+                            <td>Empate</td>
+                            <td>1/2 - 1/2</td>
+                            <td>78</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="contenedor detalle estadisticas">
+            <label class="boton volver" for="inicio">⬅ Volver</label>
+            <h1>Estadísticas</h1>
+            <div class="contenedor-estadisticas">
+                <div class="est">
+                    <h3>Victorias</h3>
+                    <h1>1</h1>
+                </div>  
+                <div class="est">
+                    <h3>Empates</h3>
+                    <h1>1</h1>
+                </div>  
+                <div class="est">
+                    <h3>Derrotas</h3>
+                    <h1>2</h1>
+                </div>  
+                <div class="est">
+                    <h3>Partidas</h3>
+                    <h1>4</h1>
+                </div>  
+                <div class="est">
+                    <h3>Movimientos</h3>
+                    <h1>239</h1>
+                </div>  
+                <div class="est">
+                    <h3>Rango</h3>
+                    <h1>1427</h1>
+                </div>  
+            </div>
+        </div>
+    </body>
 </html>
