--- a/registro/registro.html
+++ b/registro/registro.html
@@ -36,12 +36,11 @@
 
                 </div>
                 <div class="caja-input">
-                    <input type="date" placeholder="Fecha de nacimiento" required>
+                    <input type="date" required>
                 </div>
-                <button type="submit" class="btn"><a href="/pp/pp.html" class="">Registarse</a></button>
+                <a href="/pp/pp.html" class="btn">Registarse</a>
                 <div class="link-registro">
                     <p>¿Ya tienes cuenta? <a href="/login/login.html">Inicia sesión</a></p>
-                
                 </div>
             </form>
         </div>
