Redisposición carpetas y arreglo según servidor

--- a/Desarrolladores.html
+++ b/Desarrolladores.html
@@ -10,7 +10,7 @@
 <body>
     <div class="contenido-Desarrolladores">
         <div class="volver">
-            <a href="/login/login.html">⬅ Volver</a>
+            <a href="login.html">⬅ Volver</a>
         </div>
         <h1>¿Quiénes somos?</h1>
         <p>
