--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles-login.css">
         <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     </head>
     <body>
@@ -23,7 +23,7 @@
                     <p>Conviértete en el mejor</p>
                     <img src="/images/corona.png" alt="Corona">
                 </div>
-                <p class="quienes"><a href="/nosotros/Desarrolladores.html">¿Quienes somos?</a></p>
+                <p class="quienes"><a href="Desarrolladores.html">¿Quienes somos?</a></p>
             </div>
         </div>
         <div class="contenedor b">
@@ -43,9 +43,9 @@
                     </label>
                     <a href="#">¿Olvidaste tu contraseña?</a>
                 </div>
-                <a href="/pp/pp.html" class="btn">Iniciar sesión</a>
+                <a href="pp.html" class="btn">Iniciar sesión</a>
                 <div class="link-registro">
-                    <p>¿No tienes cuenta? <a href="/registro/registro.html">Registro</a></p>
+                    <p>¿No tienes cuenta? <a href="registro.html">Registro</a></p>
                 </div>
             </form>
         </div>
