--- a/partida.html
+++ b/partida.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Partida de Ajedrez</title>
-  <link rel="stylesheet" href="partida.css">
+  <link rel="stylesheet" href="styles-partida.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="contenido-ajedrez">
     <main>
-      <a href="/pp/pp.html">⬅ Volver</a>
+      <a href="pp.html">⬅ Volver</a>
       <h1>Partida en curso</h1>
       
       <div class="tablero">
