--- a/pp.html
+++ b/pp.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
         <title>Pagina principal</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles-pp.css">
     </head>
     <body>
         <input type="radio" name="vista" id="inicio" checked>
@@ -59,7 +59,7 @@
                 </span>
             </label>
             <label class="boton">
-                <a href="/perfil/perfil.html" class="box">
+                <a href="perfil.html" class="box">
                     <img src="/images/perfil.png" class="item" alt="Perfil"> 
                     <span>Perfil</span>
                 </a>  
@@ -69,7 +69,7 @@
             <label class="boton volver" for="inicio">⬅ Volver</label>
             <h1>Nueva partida</h1>
             <img src="/images/peon.png" class="itemdetalle" alt="Iniciar">
-            <a href="/partida/Partida.html" class="iniciar">Iniciar</a>
+            <a href="partida.html" class="iniciar">Iniciar</a>
         </div>
         <div class="contenedor detalle curso">
             <label class="boton volver" for="inicio">⬅ Volver</label>
