--- a/registro.html
+++ b/registro.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Registro</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles-registro.css">
         <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     </head>
     <body>
@@ -38,9 +38,9 @@
                 <div class="caja-input">
                     <input type="date" required>
                 </div>
-                <a href="/pp/pp.html" class="btn">Registarse</a>
+                <a href="pp.html" class="btn">Registarse</a>
                 <div class="link-registro">
-                    <p>¿Ya tienes cuenta? <a href="/login/login.html">Inicia sesión</a></p>
+                    <p>¿Ya tienes cuenta? <a href="login.html">Inicia sesión</a></p>
                 </div>
             </form>
         </div>
