--- a/HistoriaReglas.html
+++ b/HistoriaReglas.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Historia del Ajedrez</title>
-    <link rel="stylesheet" href="historia.css">
+    <link rel="stylesheet" href="styles-historia.css">
 </head>
 <body>
     <div class="HistoriaReglas">
         <div class="volver">
-            <a href="/perfil/perfil.html">⬅ Volver</a>
+            <a href="perfil.html">⬅ Volver</a>
         </div>
         <h1>Historia y reglas del ajedrez</h1>
         
@@ -46,4 +46,5 @@
     </div>
 </body>
 </html>
+
 
