--- a/perfil.html
+++ b/perfil.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Perfil</title>
-        <link rel="stylesheet" href="styles.css"> 
+        <link rel="stylesheet" href="styles-perfil.css"> 
     </head>
     <body>
         <div class="contenedor">
@@ -16,16 +16,16 @@
                     </div>
                     <div class="opciones">
                         <ul>
-                            <li><a href="/pp/pp.html">Jugar</a></li>
+                            <li><a href="pp.html">Jugar</a></li>
                             <li>        
                                 <label for="edicion" style="cursor: pointer;">Configuración</label>
                             </li>
                                 
-                            <li><a href="/historias-y-reglas/HistoriaReglas.html">Historia y reglas</a></li>
+                            <li><a href="HistoriaReglas.html">Historia y reglas</a></li>
                         </ul>
                     </div>
                     <div class="cerrar">        
-                        <a href="/login/login.html"><p>cerrar sesion</p></a>
+                        <a href="login.html"><p>cerrar sesion</p></a>
                     </div>
                 </div>
             </div>
@@ -125,6 +125,9 @@
         </div>
     </body>
 </html>
+
+
+
 
 
 
